# llmchat-android

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/bbsh/llamachat/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama-adapter.h  llama-arch.h  llama-context.h  llama-hparams.cpp  llama-impl.cpp  llama-impl.h  llama-jni.cpp  llama-kv-cache.h  llama-mmap.cpp  llama-model-loader.cpp  llama-model-loader.h  llama-model.cpp  llama.cpp  llama.h
app/src/main/cpp/ggml/: ggml-cpp.h
app/src/main/cpp/ggml/ggml-cpu/: ggml-cpu-impl.h
app/src/main/java/com/bbsh/llamachat/: ChatAdapter.kt  FirstFragment.kt  MainActivity.kt  SecondFragment.kt
app/src/main/java/com/bbsh/llamachat/helpers/: LlamaBridge.kt  LlamaChatEngine.kt  ModelFileHelper.kt
app/src/main/java/com/bbsh/llamachat/models/: LlamaModel.kt
app/src/main/java/com/bbsh/llamachat/viewmodels/: ChatMessage.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-v23/: themes.xml
app/src/test/java/com/bbsh/llamachat/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
llama/src/main/cpp/: llama-android.cpp
